test/good/loops/until02.px

x = 0

func f(y: Int): Int def
    x += 1
    return y

a = b = c = 0
until f(a) <= f(b-5) < f(c-10) do
    b += 1
    c += 2

print a, b, c
print x
