test/bad/functions/call09.px

func f(a: Int = 5, b: Int = 10): Void def
    return

f(a = 3, 7)
